--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
   "dependencies": {
     "css-loader": "^3.4.2",
     "lodash": "^4.17.15",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
+    "redux": "^4.0.5",
     "sass": "^1.25.0",
     "style-loader": "^1.1.3",
     "vis-network": "^7.2.0",
-    "watch": "^1.0.2"
+    "watch": "^1.0.2",
+    "webext-redux": "^2.1.6"
   }
 }
