--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "css-loader": "^3.4.2",
+    "jest-junit-reporter": "^1.1.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -47,5 +48,8 @@
     "vis-network": "^7.2.0",
     "watch": "^1.0.2",
     "webext-redux": "^2.1.6"
+  },
+  "jest": {
+    "testResultsProcessor": "./node_modules/jest-junit-reporter"
   }
 }
