Rnd 770 | configure redux for using multiple tabs (#21)
#8 Add logic for using multiple tabs

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,9 @@ package-lock.json
 # Node               #
 ######################
 node_modules
+
+dist/js/*
+yarn-error.log
+.vscode
+test-report.xml
 packages/*
