--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-loader": "^3.0.3",
@@ -34,14 +36,11 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "jest": "^25.1.0",
-    "node-sass": "^4.13.1",
-    "sass-loader": "^8.0.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
     "archiver": "^3.1.1",
-    "css-loader": "^3.4.2",
     "jest-junit-reporter": "^1.1.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
@@ -49,9 +48,9 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
-    "sass": "^1.25.0",
+    "styled-components": "^5.0.1",
+    "unique-selector": "^0.4.1",
     "semver": "^7.1.2",
-    "style-loader": "^1.1.3",
     "vis-network": "^7.2.0",
     "webext-redux": "^2.1.6"
   },
