--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@testing-library/jest-dom": "^5.1.1",
     "archiver": "^3.1.1",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
     "canvas": "^2.6.1",
@@ -57,6 +59,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
+    "renderjson": "^1.4.0",
     "styled-components": "^5.0.1",
     "unique-selector": "^0.4.1",
     "vis-network": "^7.3.4",
