--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^25.1.0",
     "jest-extended": "^0.11.5",
     "jest-junit-reporter": "^1.1.0",
