--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "release": "node ./scripts/build.js",
     "release:minor": "node ./scripts/build.js minor",
     "release:major": "node ./scripts/build.js major",
-    "clean:artifacts": "rm -rf packages/*.zip"
+    "clean:artifacts": "rm -rf packages/*.zip",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "keywords": [
     "knot.x",
@@ -27,6 +29,9 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.18",
+    "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-storysource": "^5.3.18",
     "@testing-library/jest-dom": "^5.1.1",
     "archiver": "^3.1.1",
     "babel-eslint": "^10.1.0",
@@ -38,8 +43,8 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-header": "^3.0.0",
     "eslint-loader": "^3.0.3",
+    "eslint-plugin-header": "^3.0.0",
     "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-jest": "^23.6.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
@@ -59,6 +64,10 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@storybook/addon-knobs": "^5.3.18",
+    "@storybook/addons": "^5.3.18",
+    "@storybook/react": "^5.3.18",
+    "addon-redux": "^1.1.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
@@ -66,6 +75,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "renderjson": "^1.4.0",
+    "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.0.1",
     "unique-selector": "^0.4.1",
     "vis-network": "^7.3.4",
