--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-react": "^7.8.3",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
+    "@storybook/addon-storyshots": "^5.3.18",
     "@storybook/addon-storysource": "^5.3.18",
     "@testing-library/jest-dom": "^5.1.1",
     "archiver": "^3.1.1",
@@ -54,8 +55,10 @@
     "jest": "^25.1.0",
     "jest-extended": "^0.11.5",
     "jest-junit-reporter": "^1.1.0",
+    "react-test-renderer": "^16.13.1",
     "semver": "^7.1.2",
     "style-loader": "^1.1.3",
+    "themeprovider-storybook": "^1.5.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
