--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "addon-redux": "^1.1.0",
+    "jszip": "^3.4.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
