--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "renderjson": "^1.4.0",
-    "rxjs": "^6.5.5",
+    "rxjs": "5.5.6",
     "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.0.1",
     "unique-selector": "^0.4.1",
