--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Knot.x Chrome Devtool Extension",
-  "version": "2.2.0",
+  "version": "2.2.1-SNAPSHOT",
   "description": "Extends the Developer Tools, adding a sidebar that displays the Knotx Fragments data associated with the selected DOM element.",
   "devtools_page": "index.html",
   "background": {
