--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "author": "Knot.x Community",
   "license": "Apache License 2.0",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/preset-react": "^7.8.3",
+    "@babel/core": "^7.11.1",
+    "@babel/helper-compilation-targets": "^7.10.4",
+    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "@storybook/addon-actions": "^5.3.18",
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addon-storyshots": "^5.3.18",
@@ -43,6 +45,7 @@
     "@testing-library/jest-dom": "^5.1.1",
     "archiver": "^3.1.1",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
     "canvas": "^2.6.1",
@@ -65,7 +68,7 @@
     "jest-image-snapshot": "^3.0.1",
     "jest-junit-reporter": "^1.1.0",
     "jest-puppeteer": "^4.4.0",
-    "puppeteer": "^3.0.0",
+    "puppeteer": "^5.2.1",
     "react-test-renderer": "^16.13.1",
     "semver": "^7.1.2",
     "start-server-and-test": "^1.11.0",
@@ -75,6 +78,7 @@
     "webpack-cli": "^3.3.10"
   },
   "dependencies": {
+    "@babel/runtime-corejs3": "^7.11.2",
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -83,7 +87,9 @@
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
     "addon-redux": "^1.1.0",
+    "core-js": "3",
     "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -93,7 +99,8 @@
     "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.0.1",
     "unique-selector": "^0.4.1",
-    "vis-network": "^7.3.4",
+    "vis-data": "^7.0.0",
+    "vis-network": "^8.1.0",
     "vis-timeline": "^7.1.2",
     "webext-redux": "^2.1.6"
   }
