--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "knotx-chrome-devtool-extension",
-  "version": "2.3.0-SNAPSHOT",
+  "version": "2.2.2",
   "description": "Extends the Developer Tools, adding a sidebar that displays the Knotx Fragments data associated with the selected DOM element.",
   "private": true,
   "browserslist": [
@@ -97,7 +97,6 @@
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "renderjson": "^1.4.0",
-    "sinon-chrome": "^3.0.1",
     "storybook-addon-styled-component-theme": "^1.3.0",
     "styled-components": "^5.0.1",
     "unique-selector": "^0.4.1",
