--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest -c jest.config.js",
     "test:snapshot": "jest -c jest-snapshot.config.js",
     "snapshot": "start-server-and-test storybook http-get://localhost:6006 test:snapshot",
-    "lint": "eslint -c .eslintrc.json 'src/js/**'",
+    "lint": "eslint -c .eslintrc.json src/js/**",
     "release": "node ./scripts/build.js",
     "release:minor": "node ./scripts/build.js minor",
     "release:major": "node ./scripts/build.js major",
@@ -38,10 +38,11 @@
     "@babel/plugin-proposal-optional-chaining": "^7.11.0",
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-react": "^7.10.4",
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addon-storyshots": "^5.3.18",
-    "@storybook/addon-storysource": "^5.3.18",
+    "@storybook/addon-actions": "^6.0.26",
+    "@storybook/addon-controls": "^6.0.26",
+    "@storybook/addon-links": "^6.0.26",
+    "@storybook/addon-storyshots": "^6.0.26",
+    "@storybook/addon-storysource": "^6.0.26",
     "@testing-library/jest-dom": "^5.1.1",
     "archiver": "^3.1.1",
     "babel-eslint": "^10.1.0",
@@ -73,7 +74,7 @@
     "semver": "^7.1.2",
     "start-server-and-test": "^1.11.0",
     "style-loader": "^1.1.3",
-    "themeprovider-storybook": "^1.5.1",
+    "themeprovider-storybook": "^1.6.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
@@ -83,9 +84,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@storybook/addon-knobs": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18",
+    "@storybook/addons": "^6.0.26",
+    "@storybook/react": "^6.0.26",
     "addon-redux": "^1.1.0",
     "core-js": "3",
     "lodash": "^4.17.19",
