add samples task

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "release:major": "node ./scripts/build.js major",
     "clean:artifacts": "rm -rf packages/*.zip",
     "storybook": "start-storybook -p 6006 --ci",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "samples": "http-server ./assets/samples/"
   },
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/"
@@ -63,6 +64,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "http-server": "^0.12.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^25.3.0",
     "jest-extended": "^0.11.5",
