--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "jest -c jest.config.js",
     "test:snapshot": "jest -c jest-snapshot.config.js",
     "snapshot": "start-server-and-test storybook http-get://localhost:6006 test:snapshot",
-    "lint": "eslint -c .eslintrc.json 'src/js/**'",
+    "lint": "eslint -c .eslintrc.json ./src/js/**",
     "release": "node ./scripts/build.js",
     "release:minor": "node ./scripts/build.js minor",
     "release:major": "node ./scripts/build.js major",
@@ -45,6 +45,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "babel-plugin-styled-components": "^1.10.7",
+    "@babel/helper-compilation-targets": "^7.12.1",
     "canvas": "^2.6.1",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
