--- a/package.json
+++ b/package.json
@@ -65,9 +65,11 @@
     "jest-image-snapshot": "^3.0.1",
     "jest-junit-reporter": "^1.1.0",
     "jest-puppeteer": "^4.4.0",
+    "jest-webextension-mock": "^3.6.0",
     "puppeteer": "^3.0.0",
     "react-test-renderer": "^16.13.1",
     "semver": "^7.1.2",
+    "sinon-chrome": "^3.0.1",
     "start-server-and-test": "^1.11.0",
     "style-loader": "^1.1.3",
     "themeprovider-storybook": "^1.5.1",
